--- a/Surge-Sukka.conf
+++ b/Surge-Sukka.conf
@@ -45,15 +45,16 @@ udp-policy-not-supported-behaviour = REJECT
 
 #> DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29
-# 除非当地 ISP 有严重的 DNS 污染问题，否则没必要开启 DoH，传统 DNS 的性能最优，网络异常后恢复速度最快。如果网络环境并不是很文明、则使用国内公共 DNS 提供的加密 DNS 服务、牺牲国内 CDN 体验换取整体的网络体验。
+#> 除非当地 ISP 有严重的 DNS 污染问题，否则没必要开启 DoH，传统 DNS 的性能最优，网络异常后恢复速度最快。如果网络环境并不是很文明、则使用国内公共 DNS 提供的加密 DNS 服务、牺牲国内 CDN 体验换取整体的网络体验。
 #encrypted-dns-server = quic://223.5.5.5, quic://223.6.6.6, https://1.12.12.12/dns-query, https://120.53.53.53/dns-query
-
 #> 日志级别
 loglevel = notify
 #> 测试超时（秒）
 test-timeout = 2
 #> 启用 Wi-Fi 助手 (在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启)
 wifi-assist = true
+#> GeoIP数据库
+geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 [Proxy Group]
 Proxy = select, policy-path=机场订阅链接, update-interval=36000, no-alert=0, hidden=0, include-all-proxies=0, persistent=1
