feat: add Pre-matching Reject

--- a/Surge-Sukka.conf
+++ b/Surge-Sukka.conf
@@ -1,4 +1,4 @@
-# updated at: 2024-10-24
+# updated at: 2024-11-01
 # 参考配置 - https://blog.skk.moe/post/i-have-my-unique-surge-setup/
 # 官方手册 - https://manual.nssurge.com/
 # 理解原理 - https://manual.nssurge.com/book/understanding-surge/cn/
@@ -68,19 +68,19 @@ Proxy = select, policy-path=机场订阅链接, update-interval=36000, no-alert=
 #> 广告拦截 / 隐私保护 / 病毒拦截 / 钓鱼和诈骗域名拦截
 # 应该是目前市面上拦截最全面、几乎零误杀的 Surge / Clash 域名集，域名数据来源为 uBlock Origin、AdGuard、EasyList 等共 38 个来源，截至本文写就，条目数量已经达到 30 万级别。
 # 需要注意的是，Surge / Clash 完全无法替代浏览器内的去广告插件（如 AdBlock Plus）和运行在操作系统上的去广告软件（如 AdGuard）。
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject.conf,REJECT-TINYGIF,extended-matching
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject_extra.conf,REJECT-TINYGIF,extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/reject.conf,REJECT,extended-matching
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject.conf,REJECT-TINYGIF,pre-matching,extended-matching
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/reject_extra.conf,REJECT-TINYGIF,pre-matching,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/reject.conf,REJECT,pre-matching,extended-matching
 #> 其它域名拦截
 # 其它拦截规则不涉及广告、病毒、钓鱼等的拦截，主要是通过屏蔽特定类型的网络连接改善日常上网体验。
 # 第一个规则组会阻止 YouTube、Bilibili 和斗鱼的视频 CDN 的 QUIC，以及阻止斗鱼将用户的手机电脑变成 PCDN。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-no-drop.conf,REJECT-NO-DROP,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-no-drop.conf,REJECT-NO-DROP,pre-matching,extended-matching
 # 第二个规则组是直接丢弃发往 Adobe 系列软件内部的跟踪打点域名的数据包 —— Adobe 软件的打点 SDK 所使用的 HTTP 请求库实现不当、会无限重试请求，导致 Surge / Clash 内存泄漏。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-drop.conf,REJECT-DROP,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-drop.conf,REJECT-DROP,pre-matching,extended-matching
 #> URL-REGEX
 # 需搭配 Surge 模块 https://ruleset.skk.moe/Modules/sukka_mitm_hostnames.sgmodule 使用
 # MITM 和 URL-REGEX 性能开销极大，不推荐使用
-# RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-url-regex.conf,REJECT,extended-matching
+# RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-url-regex.conf,REJECT,pre-matching,extended-matching
 
 #> 测速网站及其测速点域名
 DOMAIN-SET,https://ruleset.skk.moe/List/domainset/speedtest.conf,[替换你的策略名],extended-matching
