feat: add surge sample conf

--- a/Surge/Sukka-sample.conf
+++ b/Surge/Sukka-sample.conf
@@ -1,4 +1,4 @@
-# updated at: 2024-11-01
+# updated at: 2024-11-18
 # 参考配置 - https://blog.skk.moe/post/i-have-my-unique-surge-setup/
 # 官方手册 - https://manual.nssurge.com/
 # 理解原理 - https://manual.nssurge.com/book/understanding-surge/cn/
@@ -58,7 +58,28 @@ wifi-assist = true
 geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
 
 [Proxy Group]
-Proxy = select, policy-path=机场订阅链接, update-interval=36000, no-alert=0, hidden=0, include-all-proxies=0, persistent=1
+Proxy = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
+
+#> 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
+Streaming!CN = select, DIRECT, Proxy, 📺 Streaming, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
+#StreamingCN=select, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
+AI = select, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, 🏠 Home, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+Telegram = select, Proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, 🏠 Home, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
+Apple = select, DIRECT, Proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
+Microsoft = select, DIRECT, Proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
+
+#> 国家节点
+🇭🇰 HK = smart, include-other-group=我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+🇺🇸 US = smart, include-other-group=我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+🇯🇵 JP = smart, include-other-group=我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+🇨🇳 TW = smart, include-other-group=我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+🇸🇬 SG = smart, include-other-group=我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+🌍 Other = select,include-other-group=我的节点,no-alert=0,hidden=0,include-all-proxies=0,policy-regex-filter=^(?!.*((Traffic)|(Expire)|🇭🇰|🇨🇳|🇺🇸|🇯🇵|🇸🇬)).*$,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+#> 特殊节点
+📺 Streaming = select,include-other-group=我的节点,no-alert=0,hidden=0,include-all-proxies=0,policy-regex-filter=(0\.[1-9])|(日用)|(低倍)|(实验),icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
+🏠 Home = select,include-other-group=我的节点,no-alert=0,hidden=0,include-all-proxies=0,policy-regex-filter=(家宽)|(家用)|(家庭),icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
+#> 外部节点
+✈️ 我的节点 = select, policy-path=机场订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, persistent=1, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Airport.png
 
 [Rule]
 # 避免 DNS 污染和 DNS 泄漏最有效的办法就是永远不在本地进行 DNS 解析，而 Surge 和 Clash 能且只能通过 Fake IP 和域名规则匹配的方式 可以实现非直连域名 一定不在本地本机进行任何 DNS 解析。
@@ -84,11 +105,11 @@ RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-drop.conf,REJECT-DROP,pre-ma
 #RULE-SET,https://ruleset.skk.moe/List/non_ip/reject-url-regex.conf,REJECT,pre-matching,extended-matching
 
 #> 测速网站及其测速点域名
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/speedtest.conf,[替换你的策略名],extended-matching
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/speedtest.conf,Proxy,extended-matching
 
 #> 静态 CDN 域名
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/cdn.conf,[替换你的策略名],extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/cdn.conf,[替换你的策略名],extended-matching
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/cdn.conf,Proxy,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/cdn.conf,Proxy,extended-matching
 
 #> 流媒体域名
 # 其中，stream_[xx].conf 包含 限定地区访问的流媒体（例如 BBC 直播只允许在英国访问）的规则，而 stream.conf 则包含所有流媒体的全部规则。你可以根据自己的需求选择性引用 stream_[xx].conf 规则划分独立策略、并使用 stream.conf 为剩下所有的常用流媒体做兜底。
@@ -98,42 +119,42 @@ RULE-SET,https://ruleset.skk.moe/List/non_ip/cdn.conf,[替换你的策略名],ex
 #RULE-SET,https://ruleset.skk.moe/List/non_ip/stream_tw.conf,[替换你的策略名],extended-matching
 #RULE-SET,https://ruleset.skk.moe/List/non_ip/stream_kr.conf,[替换你的策略名],extended-matching
 #RULE-SET,https://ruleset.skk.moe/List/non_ip/stream_eu.conf,[替换你的策略名],extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/stream.conf,[替换你的策略名],extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/stream.conf,Streaming!CN,extended-matching
 
 #> AIGC 类服务域名
 # 大部分内容生成式 AI 服务（如 OpenAI 及 ChatGPT、Google Gemini 等）都会限制特定国家和地区的访问。由于这部分服务的公司一般位于美国、美国对于 AI 的立法也较为宽松，我建议这个规则组在分配策略时、优先选用位于美国的策略组访问。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/ai.conf,[替换你的策略名],extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/ai.conf,AI,extended-matching
 
 #> Telegram 域名
 # 包含 Telegram 及其旗下其他服务（Telegraph）的域名。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/telegram.conf,[替换你的策略名],extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/telegram.conf,Telegram,extended-matching
 
 #> 苹果和微软服务域名
 # Apple & Microsoft 国内 CDN 域名
-#RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cdn.conf,[替换你的策略名]
-#RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,[替换你的策略名]
+#RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cdn.conf,DIRECT
+#RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,DIRECT
 #> Apple CN 域名。云上贵州（icloud.com.cn）和苹果地图国内版等服务的域名，这部分域名需要国内直连访问。
 RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,DIRECT
 #> 排除了有国内 CDN 节点的域名和国区专用域名以后，苹果和微软其余的域名。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_services.conf,[替换你的策略名],extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft.conf,[替换你的策略名],extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_services.conf,Apple,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft.conf,Microsoft,extended-matching
 #>> iCloud Private Relay 域名列表
 # 本条配置请阅读内容后自行判断是否启用
 #DOMAIN-SET,https://ruleset.skk.moe/List/domainset/icloud_private_relay.conf,[替换你的策略名],extended-matching
 
 #> 网易云音乐的域名
 # 网易云音乐的 API 域名和网易云音乐客户端的进程名。这个规则主要用于不侵入式修改网易云音乐客户端、将某些网易云音乐使用特殊策略以实现某些特殊需求。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/neteasemusic.conf,[替换你的策略名],extended-matching
+#RULE-SET,https://ruleset.skk.moe/List/non_ip/neteasemusic.conf,[替换你的策略名],extended-matching
 
 #> 软件、游戏和驱动的下载和更新域名
 # 收集了操作系统、软件、驱动、游戏（例如 Steam 和 Epic）的下载和更新域名，但不包含国内有 CDN 节点的域名（那部分域名已经包括在前文 apple_cdn.conf 和 microsoft_cdn.conf），作用和静态 CDN 规则集类似。
 # 考虑到大部分操作系统、软件、驱动、游戏的下载域名在国内可达，大家可以根据自身需要、酌情设置 download.conf 走直连，或者在下载开始前手动调整策略。
-DOMAIN-SET,https://ruleset.skk.moe/List/domainset/download.conf,[替换你的策略名],extended-matching
-RULE-SET,https://ruleset.skk.moe/List/non_ip/download.conf,[替换你的策略名],extended-matching
+DOMAIN-SET,https://ruleset.skk.moe/List/domainset/download.conf,DIRECT,extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/download.conf,DIRECT,extended-matching
 
 #> 常见海外域名
 # 常见海外服务和互联网公司的域名。其中部分域名被 DNS 污染，将其收录在域名类规则中、配合远端策略可以避免 Surge 在本机解析这些域名、有效避免 DNS 污染和 DNS 泄漏。
-RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,[替换你的策略名],extended-matching
+RULE-SET,https://ruleset.skk.moe/List/non_ip/global.conf,Proxy,extended-matching
 
 #> 国内常见域名
 # 人工维护的国内常见互联网公司和服务的域名。这部分域名一般需要通过国内直连访问。
@@ -159,20 +180,20 @@ RULE-SET,https://ruleset.skk.moe/List/ip/reject.conf,REJECT-DROP
 #RULE-SET,https://ruleset.skk.moe/List/ip/stream_tw.conf,[替换你的策略名]
 #RULE-SET,https://ruleset.skk.moe/List/ip/stream_kr.conf,[替换你的策略名]
 #RULE-SET,https://ruleset.skk.moe/List/ip/stream_eu.conf,[替换你的策略名]
-RULE-SET,https://ruleset.skk.moe/List/ip/stream.conf,[替换你的策略名]
+RULE-SET,https://ruleset.skk.moe/List/ip/stream.conf,Streaming!CN
 
 #> Telegram IP
-RULE-SET,https://ruleset.skk.moe/List/ip/telegram.conf,[替换你的策略名]
+RULE-SET,https://ruleset.skk.moe/List/ip/telegram.conf,Telegram
 # PROCESS-NAME 本条适用于macOS
 PROCESS-NAME,Telegram,REJECT-DROP
 
 #> 网易云 IP
-RULE-SET,https://ruleset.skk.moe/List/ip/neteasemusic.conf,[替换你的策略名]
+#RULE-SET,https://ruleset.skk.moe/List/ip/neteasemusic.conf,[替换你的策略名]
 
 #> 国内 IP 段
 RULE-SET,https://ruleset.skk.moe/List/ip/domestic.conf,DIRECT
 RULE-SET,https://ruleset.skk.moe/List/ip/china_ip.conf,DIRECT
-# Only use it if you are using IPv6
+# 仅当使用 IPv6 时才启用
 #RULE-SET,https://ruleset.skk.moe/List/ip/china_ip_ipv6.conf,[替换你的策略名]
 
 #> 内网域名
@@ -182,7 +203,6 @@ RULE-SET,https://ruleset.skk.moe/List/ip/lan.conf,DIRECT
 #>> Local Area Network & GeoIP China
 # 以下规则将触发本地 DNS 解析。有上面国内部分规则可以不启用，如果不放心可以自己开启
 OR,((RULE-SET,SYSTEM), (RULE-SET,LAN), (GEOIP,CN)),DIRECT
-
 # RULE-SET,SYSTEM,Proxy
 # #>> 以下规则将触发本地 DNS 解析。有上面国内部分规则可以不启用，如果不放心可以自己开启
 # RULE-SET,LAN,DIRECT
@@ -190,4 +210,4 @@ OR,((RULE-SET,SYSTEM), (RULE-SET,LAN), (GEOIP,CN)),DIRECT
 
 #> FINAL
 # 不能被域名和 IP 规则匹配到的请求、或者 Surge 本机 DNS 解析失败的请求，都使用 FINAL 策略。
-FINAL,[替换你的策略名],dns-failed
+FINAL,Proxy,dns-failed
