fix: remove some policy

--- a/QuantumultX/Sukka-sample.conf
+++ b/QuantumultX/Sukka-sample.conf
@@ -43,12 +43,9 @@ static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW
 static=Streaming!CN, direct, proxy, Global, 📺 Streaming, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
 #static=StreamingCN, direct, proxy, Global, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
 static=AI, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
-static=Google, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
 static=Telegram, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
-static=PayPal, direct, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/social-paypal.png
-static=AppleNews, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
 static=Apple, direct, 🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
-#static=Microsoft, direct,🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
+static=Microsoft, direct,🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
 
 # 国家节点
 url-latency-benchmark=🇭🇰 HK, server-tag-regex=(?i)🇭🇰|香港|(\b(HK|Hong)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
@@ -98,9 +95,6 @@ https://ruleset.skk.moe/List/non_ip/download.conf, tag=🇺🇳Download_nonip, f
 
 # Proxy
 https://ruleset.skk.moe/List/non_ip/global.conf, tag=🇺🇳Global, force-policy=Global, update-interval=172800, opt-parser=true, enabled=true
-
-#> 自定义
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/PayPal/PayPal.list, tag=PayPal, force-policy=PayPal, update-interval=172800, opt-parser=true, enabled=false
 
 # CN
 https://ruleset.skk.moe/List/non_ip/domestic.conf, tag=🇨🇳CN_domestic, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
