fix: rename special node proxy group

--- a/QuantumultX/Sukka-sample.conf
+++ b/QuantumultX/Sukka-sample.conf
@@ -40,7 +40,8 @@ server=/*.weixin.com/119.29.29.29
 [policy]
 static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
-static=Streaming!CN, direct, proxy, Global, 📺 Streaming, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
+static=CDN, direct, proxy, Global, 📺 Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
+static=Streaming!CN, direct, proxy, Global, 📺 Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
 #static=StreamingCN, direct, proxy, Global, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
 static=AI, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
 static=Telegram, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
@@ -55,8 +56,8 @@ url-latency-benchmark=🇨🇳 TW, server-tag-regex=(?i)🇨🇳|🇹🇼|台湾
 url-latency-benchmark=🇸🇬 SG, server-tag-regex=(?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
 
 # 特殊节点
-url-latency-benchmark=📺 Streaming, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
-url-latency-benchmark=🏠 Home, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
+url-latency-benchmark=📺 Data-saving, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
+url-latency-benchmark=🏠 Home-broadband, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
 
 [server_remote]
 # 机场URL, tag=机场名, update-interval=172800, opt-parser=false, enabled=true
@@ -72,8 +73,8 @@ https://ruleset.skk.moe/List/domainset/reject_extra.conf, tag=🚫reject_extra, 
 https://ruleset.skk.moe/List/non_ip/reject.conf, tag=🚫reject_nonip, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
 # cdn
-https://ruleset.skk.moe/List/domainset/cdn.conf, tag=🇺🇳cdn, force-policy=Global, update-interval=172800, opt-parser=true, enabled=false
-https://ruleset.skk.moe/List/non_ip/cdn.conf, tag=🇺🇳cdn_nonip, force-policy=Global, update-interval=172800, opt-parser=true, enabled=false
+https://ruleset.skk.moe/List/domainset/cdn.conf, tag=🇺🇳cdn, force-policy=CDN, update-interval=172800, opt-parser=true, enabled=false
+https://ruleset.skk.moe/List/non_ip/cdn.conf, tag=🇺🇳cdn_nonip, force-policy=CDN, update-interval=172800, opt-parser=true, enabled=false
 
 # Streaming!CN
 https://ruleset.skk.moe/List/non_ip/stream.conf, tag=🇺🇳Streaming!CN, force-policy=Streaming!CN, update-interval=172800, opt-parser=true, enabled=true
