--- a/QuantumultX/Sukka-sample.conf
+++ b/QuantumultX/Sukka-sample.conf
@@ -1,4 +1,4 @@
-# updated at: 2024-11-12
+# updated at: 2024-11-30
 # 参考配置 - https://blog.skk.moe/post/i-have-my-unique-surge-setup/
 # 设置建议 -「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
 # 设置建议 - 「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -40,8 +40,8 @@ server=/*.weixin.com/119.29.29.29
 [policy]
 static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
-static=CDN, direct, proxy, Global, 📺 Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
-static=Streaming!CN, direct, proxy, Global, 📺 Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
+static=CDN, direct, proxy, Global, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+static=Streaming!CN, direct, proxy, Global, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
 #static=StreamingCN, direct, proxy, Global, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
 static=AI, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
 static=Telegram, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
@@ -56,7 +56,7 @@ url-latency-benchmark=🇨🇳 TW, server-tag-regex=(?i)🇨🇳|🇹🇼|台湾
 url-latency-benchmark=🇸🇬 SG, server-tag-regex=(?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
 
 # 特殊节点
-url-latency-benchmark=📺 Data-saving, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming.png
+url-latency-benchmark=✈️ Data-saving, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
 url-latency-benchmark=🏠 Home-broadband, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
 
 [server_remote]
