fix: QuantumultX template and sample

--- a/QuantumultX/Sukka-sample.conf
+++ b/QuantumultX/Sukka-sample.conf
@@ -1,4 +1,4 @@
-# updated at: 2024-11-30
+# updated at: 2024-12-1
 # 参考配置 - https://blog.skk.moe/post/i-have-my-unique-surge-setup/
 # 设置建议 -「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
 # 设置建议 - 「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -40,11 +40,14 @@ server=/*.weixin.com/119.29.29.29
 [policy]
 static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
-static=CDN, direct, proxy, Global, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+static=CDN, direct, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
 static=Streaming!CN, direct, proxy, Global, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
 #static=StreamingCN, direct, proxy, Global, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
-static=AI, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
-static=Telegram, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
+static=AI, 🇺🇸 US, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+static=Google, 🇺🇸 US, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
+static=Telegram, 🇸🇬 SG, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
+static=PayPal, direct, 🇺🇸 US, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/social-paypal.png
+static=AppleNews, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/AppleNews.png
 static=Apple, direct, 🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
 static=Microsoft, direct,🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
 
@@ -62,9 +65,6 @@ url-latency-benchmark=🏠 Home-broadband, server-tag-regex=(?i)(家用)|(家庭
 [server_remote]
 # 机场URL, tag=机场名, update-interval=172800, opt-parser=false, enabled=true
 
-[server_local]
-
-
 [filter_remote]
 ### non-ip ###
 # reject
@@ -73,8 +73,8 @@ https://ruleset.skk.moe/List/domainset/reject_extra.conf, tag=🚫reject_extra, 
 https://ruleset.skk.moe/List/non_ip/reject.conf, tag=🚫reject_nonip, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 
 # cdn
-https://ruleset.skk.moe/List/domainset/cdn.conf, tag=🇺🇳cdn, force-policy=CDN, update-interval=172800, opt-parser=true, enabled=false
-https://ruleset.skk.moe/List/non_ip/cdn.conf, tag=🇺🇳cdn_nonip, force-policy=CDN, update-interval=172800, opt-parser=true, enabled=false
+https://ruleset.skk.moe/List/domainset/cdn.conf, tag=🇺🇳cdn, force-policy=CDN, update-interval=172800, opt-parser=true, enabled=true
+https://ruleset.skk.moe/List/non_ip/cdn.conf, tag=🇺🇳cdn_nonip, force-policy=CDN, update-interval=172800, opt-parser=true, enabled=true
 
 # Streaming!CN
 https://ruleset.skk.moe/List/non_ip/stream.conf, tag=🇺🇳Streaming!CN, force-policy=Streaming!CN, update-interval=172800, opt-parser=true, enabled=true
@@ -83,12 +83,12 @@ https://ruleset.skk.moe/List/non_ip/stream.conf, tag=🇺🇳Streaming!CN, force
 https://ruleset.skk.moe/List/non_ip/ai.conf, tag=🇺🇳AI, force-policy=AI, update-interval=172800, opt-parser=true, enabled=true
 
 # Telegram
-https://ruleset.skk.moe/List/non_ip/telegram.conf, tag=🇺🇳Telegram, force-policy=AI, update-interval=172800, opt-parser=true, enabled=false
+https://ruleset.skk.moe/List/non_ip/telegram.conf, tag=🇺🇳Telegram, force-policy=Telegram, update-interval=172800, opt-parser=true, enabled=false
 
 # apple
-https://ruleset.skk.moe/List/non_ip/apple_cn.conf, tag=AppleCN, force-policy=Apple, update-interval=172800, opt-parser=true, enabled=true
+https://ruleset.skk.moe/List/non_ip/apple_cn.conf, tag=AppleCN, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 https://ruleset.skk.moe/List/non_ip/apple_services.conf, tag=AppleServices, force-policy=Apple, update-interval=172800, opt-parser=true, enabled=true
-#https://ruleset.skk.moe/List/non_ip/microsoft.conf, tag=🇺🇳Microsoft, force-policy=Microsoft, update-interval=172800, opt-parser=true, enabled=true
+https://ruleset.skk.moe/List/non_ip/microsoft.conf, tag=🇺🇳Microsoft, force-policy=Microsoft, update-interval=172800, opt-parser=true, enabled=true
 
 # Download
 https://ruleset.skk.moe/List/domainset/download.conf, tag=🇺🇳Download, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
@@ -112,7 +112,7 @@ https://ruleset.skk.moe/List/ip/reject.conf, tag=🚫reject_ip, force-policy=rej
 https://ruleset.skk.moe/List/ip/stream.conf, tag=🇺🇳Streaming!CN_ip, force-policy=Streaming!CN, update-interval=172800, opt-parser=true, enabled=true
 
 # Telegram
-https://ruleset.skk.moe/List/ip/telegram.conf, tag=🇺🇳Telegram_ip, force-policy=AI, update-interval=172800, opt-parser=true, enabled=false
+https://ruleset.skk.moe/List/ip/telegram.conf, tag=🇺🇳Telegram_ip, force-policy=Telegram, update-interval=172800, opt-parser=true, enabled=false
 
 # CN
 https://ruleset.skk.moe/List/ip/domestic.conf, tag=🇨🇳CN_domestic_ip, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
@@ -121,19 +121,9 @@ https://ruleset.skk.moe/List/ip/china_ip.conf, tag=🇨🇳CN_ip, force-policy=d
 # Lan
 https://ruleset.skk.moe/List/ip/lan.conf, tag=🇨🇳Lan_ip, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 
-#> 自定义
-#FILTER_LAN, tag=LAN, force-policy=direct, enabled=true
-#FILTER_REGION, tag=CN, force-policy=direct, enabled=true
-
-[filter_local]
-ip-cidr, 10.0.0.0/8, direct
-ip-cidr, 127.0.0.0/8, direct
-ip-cidr, 172.16.0.0/12, direct
-ip-cidr, 192.168.0.0/16, direct
-ip-cidr, 224.0.0.0/24, direct
-ip-cidr, 182.254.116.0/24, direct
-geoip, cn, direct
-final, Global
+# FILTER 
+FILTER_LAN, tag=LAN, force-policy=direct, enabled=true
+FILTER_REGION, tag=CN, force-policy=direct, enabled=true
 
 [rewrite_remote]
 https://github.com/NSRingo/GeoServices/releases/latest/download/Location.snippet, tag=Location@NSRingo, update-interval=172800, opt-parser=true, enabled=false
@@ -150,6 +140,20 @@ https://raw.githubusercontent.com/QingRex/LoonKissSurge/refs/heads/main/Surge/%E
 https://raw.githubusercontent.com/QingRex/LoonKissSurge/refs/heads/main/Surge/%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%8F%B7%E5%8E%BB%E5%B9%BF%E5%91%8A.sgmodule, tag=微信公众号去广告, update-interval=172800, opt-parser=true, enabled=false
 https://raw.githubusercontent.com/QingRex/LoonKissSurge/refs/heads/main/Surge/%E5%BE%AE%E4%BF%A1%E5%B0%8F%E7%A8%8B%E5%BA%8F%E5%8E%BB%E5%B9%BF%E5%91%8A.sgmodule, tag=微信小程序去广告, update-interval=172800, opt-parser=true, enabled=false
 
+[server_local]
+
+
+[filter_local]
+# ip-cidr, 10.0.0.0/8, direct
+# ip-cidr, 127.0.0.0/8, direct
+# ip-cidr, 172.16.0.0/12, direct
+# ip-cidr, 192.168.0.0/16, direct
+# ip-cidr, 224.0.0.0/24, direct
+# ip-cidr, 182.254.116.0/24, direct
+# geoip, cn, direct
+# final, proxy
+final, Global
+
 [rewrite_local]
 
 
@@ -164,4 +168,3 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 
 
 [mitm]
-
