--- a/Surge/Sukka-sample.conf
+++ b/Surge/Sukka-sample.conf
@@ -59,7 +59,7 @@ geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mm
 
 [Proxy Group]
 #> 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
-Proxy = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, ✈️ 我的节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
+Proxy = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇰🇷 KR, 🇸🇬 SG, 🌍 Other, ✈️ 我的节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 
 CDN = select, DIRECT, ✈️ Data-saving, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
 Streaming!CN = select, DIRECT, ✈️ Data-saving, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
@@ -76,11 +76,11 @@ Microsoft = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, icon-url=https://raw.githu
 🇨🇳 TW = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
 🇰🇷 KR = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
 🇸🇬 SG = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-🌍 Other = select,include-other-group=✈️ 我的节点,no-alert=0,hidden=0,include-all-proxies=0,policy-regex-filter=^(?!.*((Traffic)|(Expire)|🇭🇰|🇨🇳|🇺🇸|🇯🇵|🇸🇬)).*$,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+🌍 Other = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, policy-regex-filter=^(?!.*((Traffic)|(Expire)|🇭🇰|🇨🇳|🇺🇸|🇯🇵|🇸🇬)).*$,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
 #> 特殊节点
-✈️ Data-saving = select,include-other-group=✈️ 我的节点,no-alert=0,hidden=0,include-all-proxies=0,policy-regex-filter=(0\.[1-9])|(日用)|(低倍)|(实验),icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-🏠 Home-broadband = select,include-other-group=✈️ 我的节点,no-alert=0,hidden=0,include-all-proxies=0,policy-regex-filter=(家用)|(家庭)|(家宽),icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
+✈️ Data-saving = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=0,include-all-proxies=0, policy-regex-filter=(0\.[1-9])|(日用)|(低倍)|(实验),icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+🏠 Home-broadband = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=0,include-all-proxies=0, policy-regex-filter=(家用)|(家庭)|(家宽),icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
 
 #> 外部节点
 ✈️ 我的节点 = select, policy-path=机场订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, persistent=1, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Airport.png
