--- a/QuantumultX/Sukka-sample.conf
+++ b/QuantumultX/Sukka-sample.conf
@@ -38,16 +38,13 @@ server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
 
 [policy]
-static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, ✈️ Data-saving, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
-static=CDN, direct, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-static=Streaming!CN, direct, proxy, Global, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
+static=CDN, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+static=Streaming!CN, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, ✈️ Data-saving, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
 #static=StreamingCN, direct, proxy, Global, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
 static=AI, 🇺🇸 US, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
-static=Google, 🇺🇸 US, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
-static=Telegram, 🇸🇬 SG, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
-static=PayPal, direct, 🇺🇸 US, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/social-paypal.png
-static=AppleNews, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/AppleNews.png
+static=Telegram, 🇺🇸 US, 🇸🇬 SG, 🏠 Home-broadband, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
 static=Apple, direct, 🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
 static=Microsoft, direct,🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
 
@@ -60,7 +57,7 @@ url-latency-benchmark=🇸🇬 SG, server-tag-regex=(?i)🇸🇬|新加坡|狮|(
 
 # 特殊节点
 url-latency-benchmark=✈️ Data-saving, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-url-latency-benchmark=🏠 Home-broadband, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/Twoandz9/Tag.png
+url-latency-benchmark=🏠 Home-broadband, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TAG.png
 
 [server_remote]
 # 机场URL, tag=机场名, update-interval=172800, opt-parser=false, enabled=true
