feat: add google rules

--- a/Surge/Sukka-sample.conf
+++ b/Surge/Sukka-sample.conf
@@ -67,6 +67,7 @@ Streaming!CN = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 T
 AI = select, 🇺🇸 US, 🏠 Home-broadband, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
 Telegram = select, 🇺🇸 US, 🇸🇬 SG, 🏠 Home-broadband, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
 Apple = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
+Google  = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
 Microsoft = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
 
 #> 国家节点
@@ -137,7 +138,7 @@ RULE-SET,https://ruleset.skk.moe/List/non_ip/telegram.conf,Telegram,extended-mat
 # Apple & Microsoft 国内 CDN 域名
 #RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cdn.conf,DIRECT
 #RULE-SET,https://ruleset.skk.moe/List/non_ip/microsoft_cdn.conf,DIRECT
-#> Apple CN 域名。云上贵州（icloud.com.cn）和苹果地图国内版等服务的域名，这部分域名需要国内直连访问。
+#> Apple CN 域名，云上贵州（icloud.com.cn）和苹果地图国内版等服务的域名，这部分域名需要国内直连访问。
 RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_cn.conf,DIRECT
 #> 排除了有国内 CDN 节点的域名和国区专用域名以后，苹果和微软其余的域名。
 RULE-SET,https://ruleset.skk.moe/List/non_ip/apple_services.conf,Apple,extended-matching
@@ -157,6 +158,8 @@ DOMAIN-SET,https://ruleset.skk.moe/List/domainset/download.conf,DIRECT,extended-
 RULE-SET,https://ruleset.skk.moe/List/non_ip/download.conf,DIRECT,extended-matching
 
 #>> 自定义 non-ip 规则
+# Google
+https://raw.githubusercontent.com/fuh/ABC/master/Surge/Ruleset/non_ip/google.list,Google,extended-matching
 
 #> 常见海外域名
 # 常见海外服务和互联网公司的域名。其中部分域名被 DNS 污染，将其收录在域名类规则中、配合远端策略可以避免 Surge 在本机解析这些域名、有效避免 DNS 污染和 DNS 泄漏。
@@ -196,7 +199,9 @@ PROCESS-NAME,Telegram,REJECT-DROP
 #> 网易云 IP
 #RULE-SET,https://ruleset.skk.moe/List/ip/neteasemusic.conf,[替换你的策略名]
 
-#>> 自定义 non-ip 规则
+#>> 自定义 ip 规则
+# Google
+https://raw.githubusercontent.com/fuh/ABC/master/Surge/Ruleset/ip/google.list,Google,extended-matching
 
 #> 国内 IP 段
 RULE-SET,https://ruleset.skk.moe/List/ip/domestic.conf,DIRECT
