fix: google ruleset in surge

--- a/Surge/Sukka-sample.conf
+++ b/Surge/Sukka-sample.conf
@@ -159,7 +159,7 @@ RULE-SET,https://ruleset.skk.moe/List/non_ip/download.conf,DIRECT,extended-match
 
 #>> 自定义 non-ip 规则
 # Google
-https://raw.githubusercontent.com/fuh/ABC/master/Surge/Ruleset/non_ip/google.list,Google,extended-matching
+RULE-SET,https://raw.githubusercontent.com/fuh/ABC/master/Surge/Ruleset/non_ip/google.list,Google,extended-matching
 
 #> 常见海外域名
 # 常见海外服务和互联网公司的域名。其中部分域名被 DNS 污染，将其收录在域名类规则中、配合远端策略可以避免 Surge 在本机解析这些域名、有效避免 DNS 污染和 DNS 泄漏。
@@ -201,7 +201,7 @@ PROCESS-NAME,Telegram,REJECT-DROP
 
 #>> 自定义 ip 规则
 # Google
-https://raw.githubusercontent.com/fuh/ABC/master/Surge/Ruleset/ip/google.list,Google,extended-matching
+RULE-SET,https://raw.githubusercontent.com/fuh/ABC/master/Surge/Ruleset/ip/google.list,Google
 
 #> 国内 IP 段
 RULE-SET,https://ruleset.skk.moe/List/ip/domestic.conf,DIRECT
