fix: Rename proxy name

--- a/QuantumultX/Sukka-template.conf
+++ b/QuantumultX/Sukka-template.conf
@@ -38,7 +38,7 @@ server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
 
 [policy]
-
+static=Final, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
 [server_remote]
 # 机场URL, tag=机场名, update-interval=172800, opt-parser=false, enabled=true
@@ -110,15 +110,16 @@ FILTER_REGION, tag=CN, force-policy=direct, enabled=true
 
 
 [filter_local]
-# ip-cidr, 10.0.0.0/8, direct
-# ip-cidr, 127.0.0.0/8, direct
-# ip-cidr, 172.16.0.0/12, direct
-# ip-cidr, 192.168.0.0/16, direct
-# ip-cidr, 224.0.0.0/24, direct
-# ip-cidr, 182.254.116.0/24, direct
-# geoip, cn, direct
-# final, proxy
-final, [替换你的策略名]
+# local
+#ip-cidr, 10.0.0.0/8, direct
+#ip-cidr, 127.0.0.0/8, direct
+#ip-cidr, 172.16.0.0/12, direct
+#ip-cidr, 192.168.0.0/16, direct
+#ip-cidr, 224.0.0.0/24, direct
+#ip-cidr, 182.254.116.0/24, direct
+#geoip, cn, direct
+#final, proxy
+final, Final
 
 [rewrite_local]
 
