--- a/QuantumultX/Sukka-sample.conf
+++ b/QuantumultX/Sukka-sample.conf
@@ -1,4 +1,4 @@
-# updated at: 2024-12-1
+# updated at: 2025-04-01
 # 参考配置 - https://blog.skk.moe/post/i-have-my-unique-surge-setup/
 # 设置建议 -「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
 # 设置建议 - 「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -38,27 +38,27 @@ server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
 
 [policy]
-static=Global, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, 🎞️ Streaming, 🏠 HomeNetwork, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+static=Final, direct, proxy, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🎞️ 流媒体节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
-static=CDN, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, 🎞️ Streaming, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-static=Streaming!CN, direct, proxy, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇸🇬 SG, 🎞️ Streaming, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
-#static=StreamingCN, direct, proxy, Global, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
-static=AI, 🇺🇸 US, 🏠 HomeNetwork, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
-static=Telegram, 🇺🇸 US, 🇸🇬 SG, 🏠 HomeNetwork, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
-static=Apple, direct, 🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
-static=Google, direct,🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
-static=Microsoft, direct,🇭🇰 HK, 🇺🇸 US, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
+static=CDN, direct, proxy, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🎞️ 流媒体节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+static=Streaming!CN, direct, proxy, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🎞️ 流媒体节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
+#static=StreamingCN, direct, proxy, Final, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
+static=AI, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🏠 家庭宽带节点, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+static=Telegram, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🏠 家庭宽带节点, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
+static=Apple, direct, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🏠 家庭宽带节点, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
+static=Google, direct, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🏠 家庭宽带节点, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
+static=Microsoft, direct, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🏠 家庭宽带节点, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
 
 # 国家节点
-url-latency-benchmark=🇭🇰 HK, server-tag-regex=(?i)🇭🇰|香港|(\b(HK|Hong)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-url-latency-benchmark=🇺🇸 US, server-tag-regex=(?i)🇺🇸|美国|洛杉矶|圣何塞|(\b(US|United States)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-url-latency-benchmark=🇯🇵 JP, server-tag-regex=(?i)🇯🇵|日本|东京|(\b(JP|Japan)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-url-latency-benchmark=🇨🇳 TW, server-tag-regex=(?i)🇨🇳|🇹🇼|台湾|(\b(TW|Tai|Taiwan)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
-url-latency-benchmark=🇸🇬 SG, server-tag-regex=(?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+url-latency-benchmark=🇭🇰 香港节点, server-tag-regex=(?i)🇭🇰|香港|(\b(HK|Hong)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+url-latency-benchmark=🇺🇸 美国节点, server-tag-regex=(?i)🇺🇸|美国|洛杉矶|圣何塞|(\b(US|United States)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+url-latency-benchmark=🇯🇵 日本节点, server-tag-regex=(?i)🇯🇵|日本|东京|(\b(JP|Japan)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+url-latency-benchmark=🇨🇳 台湾节点, server-tag-regex=(?i)🇨🇳|🇹🇼|台湾|(\b(TW|Tai|Taiwan)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/China.png
+url-latency-benchmark=🇸🇬 新加坡节点, server-tag-regex=(?i)🇸🇬|新加坡|狮|(\b(SG|Singapore)\b), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
 
 # 特殊节点
-url-latency-benchmark=🎞️ Streaming, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-url-latency-benchmark=🏠 HomeNetwork, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TAG.png
+url-latency-benchmark=🎞️ 流媒体节点, server-tag-regex=(?i)(0\.[1-9])|(日用)|(低倍)|(实验), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+url-latency-benchmark=🏠 家庭宽带节点, server-tag-regex=(?i)(家用)|(家庭)|(家宽), check-interval=300, alive-checking=false, tolerance=0, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TAG.png
 
 [server_remote]
 # 机场URL, tag=机场名, update-interval=172800, opt-parser=false, enabled=true
@@ -97,7 +97,7 @@ https://ruleset.skk.moe/List/non_ip/download.conf, tag=🇺🇳Download_nonip, f
 https://raw.githubusercontent.com/limxfx/HelloWorld/refs/heads/main/Surge/Ruleset/non_ip/google.list, tag=🇺🇳Google force-policy=Google, update-interval=172800, opt-parser=true, enabled=true
 
 # Proxy
-https://ruleset.skk.moe/List/non_ip/global.conf, tag=🇺🇳Global, force-policy=Global, update-interval=172800, opt-parser=true, enabled=true
+https://ruleset.skk.moe/List/non_ip/global.conf, tag=🇺🇳Global, force-policy=Final, update-interval=172800, opt-parser=true, enabled=true
 
 # CN
 https://ruleset.skk.moe/List/non_ip/domestic.conf, tag=🇨🇳CN_domestic, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
@@ -150,15 +150,16 @@ https://raw.githubusercontent.com/QingRex/LoonKissSurge/refs/heads/main/Surge/%E
 
 
 [filter_local]
-# ip-cidr, 10.0.0.0/8, direct
-# ip-cidr, 127.0.0.0/8, direct
-# ip-cidr, 172.16.0.0/12, direct
-# ip-cidr, 192.168.0.0/16, direct
-# ip-cidr, 224.0.0.0/24, direct
-# ip-cidr, 182.254.116.0/24, direct
-# geoip, cn, direct
-# final, proxy
-final, Global
+# local
+#ip-cidr, 10.0.0.0/8, direct
+#ip-cidr, 127.0.0.0/8, direct
+#ip-cidr, 172.16.0.0/12, direct
+#ip-cidr, 192.168.0.0/16, direct
+#ip-cidr, 224.0.0.0/24, direct
+#ip-cidr, 182.254.116.0/24, direct
+#geoip, cn, direct
+#final, proxy
+final, Final
 
 [rewrite_local]
 
