--- a/Surge/Sukka-sample.conf
+++ b/Surge/Sukka-sample.conf
@@ -1,4 +1,4 @@
-# updated at: 2024-12-1
+# updated at: 2025-04-01
 # 参考配置 - https://blog.skk.moe/post/i-have-my-unique-surge-setup/
 # 官方手册 - https://manual.nssurge.com/
 # 理解原理 - https://manual.nssurge.com/book/understanding-surge/cn/
@@ -59,32 +59,31 @@ geoip-maxmind-url = https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mm
 
 [Proxy Group]
 #> 策略组（下面的节点信息需与外部节点对应，若删除了外部节点里的节点，那么在策略组里也要删除。）
-Proxy = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇰🇷 KR, 🇸🇬 SG, 🌍 Other, ✈️ 我的节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
+Proxy = select, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🎞️ 流媒体节点, ✈️ 我的机场, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Proxy.png
 
-CDN = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇰🇷 KR, 🇸🇬 SG, 🎞️ Streaming, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-Streaming!CN = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇰🇷 KR, 🇸🇬 SG, 🎞️ Streaming, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
+CDN = select, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🎞️ 流媒体节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+Streaming!CN = select, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🎞️ 流媒体节点, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Streaming!CN.png
 #StreamingCN=select, DIRECT, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingCN.png
-AI = select, 🇺🇸 US, 🏠 HomeNetwork, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
-Google  = select, 🇭🇰 HK, 🇺🇸 US, 🏠 HomeNetwork, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
-Telegram = select, 🇭🇰 HK, 🇺🇸 US, 🇯🇵 JP, 🇨🇳 TW, 🇰🇷 KR, 🇸🇬 SG, 🏠 HomeNetwork, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
-Apple = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
-Microsoft = select, DIRECT, 🇭🇰 HK, 🇺🇸 US, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
+AI = select, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🏠 家庭宽带节点, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/OpenAI.png
+Google  = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🏠 家庭宽带节点, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Google.png
+Telegram = select, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🏠 家庭宽带节点, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/lige47/telegram(1).png
+Apple = select, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🏠 家庭宽带节点, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Apple.png
+Microsoft = select, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, 🇸🇬 新加坡节点, 🌍 其他节点, 🏠 家庭宽带节点, icon-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/Microsoft.png
 
 #> 国家节点
-🇭🇰 HK = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
-🇺🇸 US = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
-🇯🇵 JP = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
-🇨🇳 TW = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
-🇰🇷 KR = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇰🇷)|(韩国)|(Korea)|(KR), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Korea.png
-🇸🇬 SG = smart, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
-🌍 Other = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, policy-regex-filter=^(?!.*((Traffic)|(Expire)|🇭🇰|🇨🇳|🇺🇸|🇯🇵|🇸🇬)).*$,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
+🇭🇰 香港节点 = smart, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇭🇰)|(香港)|(Hong)|(HK), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Hong_Kong.png
+🇺🇸 美国节点 = smart, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇺🇸)|(美国)|(States)|(US), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/United_States.png
+🇯🇵 日本节点 = smart, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇯🇵)|(日本)|(Japan)|(JP), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Japan.png
+🇨🇳 台湾节点 = smart, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇨🇳)|(台湾)|(Tai)|(TW), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Taiwan.png
+🇸🇬 新加坡节点 = smart, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=(🇸🇬)|(新加坡)|(Singapore)|(SG), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Singapore.png
+🌍 其他节点 = select, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, policy-regex-filter=^(?!.*((Traffic)|(Expire)|🇭🇰|🇨🇳|🇺🇸|🇯🇵|🇸🇬)).*$,icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 
 #> 特殊节点
-🎞️ Streaming = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=0,include-all-proxies=0, policy-regex-filter=(0\.[1-9])|(日用)|(低倍)|(实验), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
-🏠 HomeNetwork = select, include-other-group=✈️ 我的节点, update-interval=0, no-alert=0, hidden=0,include-all-proxies=0, policy-regex-filter=(家用)|(家庭)|(家宽), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TAG.png
+🎞️ 流媒体节点 = select, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=0,include-all-proxies=0, policy-regex-filter=(0\.[1-9])|(日用)|(低倍)|(实验), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
+🏠 家庭宽带节点 = select, include-other-group=✈️ 我的机场, update-interval=0, no-alert=0, hidden=0,include-all-proxies=0, policy-regex-filter=(家用)|(家庭)|(家宽), icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TAG.png
 
 #> 外部节点
-✈️ 我的节点 = select, policy-path=机场订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, persistent=1, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Airport.png
+✈️ 我的机场 = select, policy-path=机场订阅链接, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0, persistent=1, icon-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Airport.png
 
 [Rule]
 # 避免 DNS 污染和 DNS 泄漏最有效的办法就是永远不在本地进行 DNS 解析，而 Surge 和 Clash 能且只能通过 Fake IP 和域名规则匹配的方式 可以实现非直连域名 一定不在本地本机进行任何 DNS 解析。
